--- a/.gitignore
+++ b/.gitignore
@@ -6,18 +6,11 @@ lib-cov
 *.out
 *.pid
 *.gz
-
 pids
 results
 node_modules
-
-bundles/*
-!bundles/sample.js
-
-
-
+bundles
+logs
 config.json
-
 npm-debug.log
 .DS_Store
-config.json
