Ignore these things that keeps popping back in.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ pids
 results
 node_modules
 
+bundles
 bundles/
 bundles/*
 !bundles/sample.js
@@ -22,3 +23,4 @@ config.json
 npm-debug.log
 .DS_Store
 config.json
+spasout*
